<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_marginLeft="10dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="60dp"
            android:scrollbars="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/btnProfile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_button"
                    android:layout_gravity="right"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_sharp_account_circle_24" />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/ac_homepage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/ac_homepage"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvRecommended"
                        android:scrollbarAlwaysDrawHorizontalTrack="true"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="240dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ac_see"
                        android:layout_gravity="right"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/ac_new"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvNew"
                        android:scrollbarAlwaysDrawHorizontalTrack="true"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="240dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ac_see"
                        android:layout_gravity="right"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/ac_hot"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvHot"
                        android:scrollbarAlwaysDrawHorizontalTrack="true"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="240dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ac_see"
                        android:layout_gravity="right"
                        />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/fragContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#CCC8C8"
        >
        <LinearLayout
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">
            <ImageView
                android:src="@drawable/home"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_homepage"
                android:gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnMenu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">
            <ImageView
                android:src="@drawable/menu"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Fragment_Menu"
                android:gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>
        <LinearLayout
            android:id="@+id/btnFavorites"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">
            <ImageView
                android:src="@drawable/favorites"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_favorites"
                android:gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnChat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">
            <ImageView
                android:src="@drawable/chat"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fragment_chat"
                android:gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
        <RelativeLayout
            android:id="@+id/btnAdd"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/custom_button"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp">
            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_shopping_cart_24"/>
        </RelativeLayout>
    </RelativeLayout>
</layout>